# bawang

./: .gitignore  README.md  pyproject.toml
src/bawang/: __init__.py  __main__.py  cli.py  config.py  models.py
src/bawang/player/: __init__.py  detect.py  ffplay.py  mpv.py
src/bawang/resolver/: __init__.py  heuristics.py  resolve.py
src/bawang/resolver/hosts/: __init__.py
src/bawang/scraper/: common.py  episodes.py  search.py
src/bawang/tui/: __init__.py  app.py  events.py  screens.py  widgets.py
src/bawang/utils/: log.py  net.py  text.py
