[project]
name = "bawang"
version = "0.1.0"
description = "CLI TUI to search and stream anime from Samehadaku"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "cloudscraper>=1.2.71",
  "httpx>=0.26.0",
  "prompt_toolkit>=3.0.43",
  "requests>=2.31.0",
  "rich>=13.7.0",
]

[project.scripts]
bawang = "bawang.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
